calico/ssh-gpolicy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-ssh-access-on-node
spec:
  selector: nodetype == "worker"
  order: 0
  ingress:
  - action: Allow
    source:
      nets:
      - '0.0.0.0/0'
    destination:
      ports:
      - 22
  egress:
  - action: Allow
    destination:
      nets:
      - '0.0.0.0/0'
